# sana-trainer

./: .gitignore  README.md  pyproject.toml
accelerate/: zero2.yaml  zero3.yaml
configs/: commoncatalog_benchmark.yaml  commoncatalog_cpt.yaml  commoncatalog_resume_smoke.yaml  commoncatalog_sft.yaml  commoncatalog_smoke.yaml  cpt.yaml  sft.yaml  supups_v1_cpt.yaml  supups_v1_sft.yaml  supups_v2_cpt.yaml  supups_v3_cpt.yaml  supups_v3_sft.yaml
scripts/: benchmark_precompute.py  gpu_smoke.py  plot_current_t_sigma_distribution.py  plot_sampling_distributions.py  render_supups_dataset_report.py  report_supups_tags.py  sample_all_checkpoints.py
src/fm_train/: __init__.py  cache.py  cached_dataset.py  checkpoints.py  cli.py  config.py  data.py  example_dataset.py  objective.py  optim.py  precompute.py  producer.py  trainer.py
tests/: test_cache.py  test_cached_dataset.py  test_checkpoints.py  test_commoncatalog.py  test_config.py  test_data.py  test_objective.py  test_optim.py  test_producer.py  test_supups_dataset.py
