[project]
name = "sana-fm-trainer"
version = "0.1.0"
description = "Accelerate/DeepSpeed full-parameter CPT and SFT for Sana flow matching"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.10",
  "bitsandbytes>=0.46; platform_system == 'Linux'",
  "datasets>=3.0",
  "deepspeed>=0.17; platform_system == 'Linux'",
  "diffusers>=0.38.0",
  "pillow>=10.0",
  "pyarrow>=18.0",
  "pyyaml>=6.0",
  "safetensors>=0.5",
  "torch>=2.7",
  "torchvision>=0.22",
  "trackio>=0.9",
  "transformers>=4.52",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fm-train = "fm_train.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fm_train"]

[tool.pytest.ini_options]
testpaths = ["tests"]
